# gradio_macro_test

./: .gitignore  Cargo.toml  api.txt  exp.txt  readme.md
examples/: vocal.rs  whisper.rs
gradio_macro/: Cargo.toml
gradio_macro/src/: lib.rs
src/: lib.rs  main.rs
