[package]
name = "gradio_macro"
description = "A macro for generating Gradio interfaces."
version = "0.1.0"
edition = "2021"
repository = "https://github.com/denizsincar29/gradio_macro_test"
license = "mit"

[dependencies]
anyhow = "1.0.86"
gradio = "0.3.0"
heck = "0.5.0"

proc-macro2 = "1.0"
quote = "1.0.37"
serde = "1.0.209"
serde_json = "1.0.127"
syn = "2.0.76"

[dev-dependencies]
tokio = { version = "1.10.0", features = ["full"] }

[lib]
proc-macro = true

